UIP-3561: End-user improvements for FlowUI

--- a/packages/branding-themes/themes/default/default.scss
+++ b/packages/branding-themes/themes/default/default.scss
@@ -11,3 +11,9 @@ $images: getThemeImages($THEME_NAME);
         max-width: 100%;
     }
 }
+
+.branding-template-primary-button {
+    &:hover {
+        opacity: 0.9;
+    }
+}
