--- a/packages/branding-themes/themes/focus/focus.scss
+++ b/packages/branding-themes/themes/focus/focus.scss
@@ -60,6 +60,10 @@ $images: getThemeImages($THEME_NAME);
     text-align: left;
 }
 
+.branding-template-link-container {
+    text-align: center;
+}
+
 .branding-template-error-text {
     text-align: center;
     font-size: 18px;
