--- a/packages/branding-themes/themes/split/split.scss
+++ b/packages/branding-themes/themes/split/split.scss
@@ -91,6 +91,10 @@ $images: getThemeImages($THEME_NAME);
     text-align: left;
 }
 
+.branding-template-link-container {
+    text-align: center;
+}
+
 .branding-template-heading {
     text-align: left;
     margin-bottom: 15px;
