--- a/packages/branding-themes/scss/_helpers.scss
+++ b/packages/branding-themes/scss/_helpers.scss
@@ -27,17 +27,20 @@
 // This allows for standardization for over-writing theme styles in the client
 @mixin base($images, $colors) {
     body,
-    html {
+    html,
+    .page {
         height: 100%;
     }
 
-    body {
+    .page {
+        /**
+         * Note: Using !important to override .page defaults in end-user.css
+         */
         @if type-of($images) == 'map' {
-            background: url(map-get($images, 'background'));
+            background-image: url(map-get($images, 'background')) !important;
         } @else {
-            background: map-get($colors, 'background');
+            background: map-get($colors, 'background') !important;
         }
-        color: map-get($colors, 'bodyText');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -55,6 +58,14 @@
         border-color: map-get($colors, 'button');
     }
 
+    .branding-template-primary-text {
+        color: map-get($colors, 'bodyText');
+    }
+
+    .branding-template-link-container {
+        color: map-get($colors, 'bodyText');
+    }
+
     .branding-template-logo-container {
         border-color: map-get($colors, 'background');
     }
@@ -66,6 +77,10 @@
 
         &:hover {
             color: map-get($colors, 'buttonText');
+        }
+
+        &:active {
+            background-color: map-get($colors, 'button');
         }
     }
 
