--- a/packages/branding-themes/themes/mural/mural.scss
+++ b/packages/branding-themes/themes/mural/mural.scss
@@ -19,9 +19,7 @@ $images: getThemeImages($THEME_NAME);
 
     @media all and (max-width: 600px) {
         border-radius: 0;
-        margin-top: 0;
-        margin-left: 0;
-        margin-bottom: 0;
+        margin: 0;
         width: initial;
         max-width: 100%;
         height: 100%;
@@ -63,6 +61,10 @@ $images: getThemeImages($THEME_NAME);
 .branding-template-heading,
 .branding-template-primary-text {
     text-align: left;
+}
+
+.branding-template-link-container {
+    text-align: center;
 }
 
 .branding-template-error-text {
