UIP-3585: extra shift happened for deep children inside FlexRow at smaller screens

--- a/packages/end-user/src/css/shared/_flex-row.scss
+++ b/packages/end-user/src/css/shared/_flex-row.scss
@@ -127,7 +127,7 @@
             width: 100%;
         }
 
-        *:not(:last-child) {
+        & > *:not(:last-child) {
             margin-bottom: 10px;
             margin-right: 0;
         }
