UIP-3563 Add ellipsis overflow for search result item sections and roots on NavFrame

--- a/packages/ui-library/src/css/forms/_keyword-search.scss
+++ b/packages/ui-library/src/css/forms/_keyword-search.scss
@@ -42,12 +42,17 @@
         }
 
         &-label {
-            max-width: 55%;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            max-width: 55%;
         }
 
+        &-section.text-component,
+        &-root.text-component {
+            width: unset;
+            max-width: 45%;
+        }
     }
 
     &__result-section {
