--- a/packages/ui-library/src/css/_collapsible-section.scss
+++ b/packages/ui-library/src/css/_collapsible-section.scss
@@ -5,7 +5,11 @@
     position: relative;
     border-top: 1px dotted $color-rabbit-fur;
     border-bottom: 1px dotted $color-rabbit-fur;
-    margin: 0 0 -1px 0;
+
+    //When collapsible-section follows another element in its container apply this style.
+    * + & {
+        margin-top: -1px;
+    }
 
     &--no-underline {
         border: none;
