UIP-3533: Bold text handler

--- a/packages/ui-library/src/css/_text.scss
+++ b/packages/ui-library/src/css/_text.scss
@@ -1,6 +1,24 @@
 @import 'general/page-header';
 @import 'general/formatted-content';
 
+.text-weight {
+
+    &--normal {
+        font-weight: normal;
+    }
+
+    &--bold {
+        text-shadow: 0 0 0.65px #333, 0 0 0.65px #333;
+    }
+
+    &--hover {
+
+        &:hover {
+            text-shadow: 0 0 0.65px #333, 0 0 0.65px #333;
+        }
+    }
+}
+
 .content-link {
     line-height: inherit;
     a {
