UIP-2834: Remove flags [end-user]

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -73,8 +73,7 @@
 @import './components/phone-input';
 @import './components/social-button';
 
-// spacing components are after so they take precedence\
-
+// Spacing components are after so they take precedence
 @import './components/form-aside';
 @import './components/stack';
 
