UIP-3558: Resetting min-height on tertiary button

--- a/packages/end-user/src/css/components/_button.scss
+++ b/packages/end-user/src/css/components/_button.scss
@@ -40,6 +40,7 @@
         width: auto;
         margin-left: auto;
         margin-right: auto;
+        min-height: auto;
     }
 
     &:disabled, &--disabled {
