--- a/packages/ui-library/src/css/panels/_quick-actions.scss
+++ b/packages/ui-library/src/css/panels/_quick-actions.scss
@@ -2,8 +2,7 @@
 .quick-actions {
     &__action-card {
         padding: 15px;
-        width: 115px;
-        height: 100px;
+        flex-basis: 115px;
         text-align: center;
     }
 
@@ -55,5 +54,11 @@
             color: $color-strong-neutral-60;
             font-size: 10px;
         }
+    }
+
+    &__divider {
+        border-left: 1px dotted $color-white;
+        margin-top: 57px;
+        margin-bottom: 10px;
     }
 }
