--- a/packages/ui-library/src/css/panels/_quick-actions.scss
+++ b/packages/ui-library/src/css/panels/_quick-actions.scss
@@ -6,6 +6,34 @@
         text-align: center;
     }
 
+    &__action-card--inverted & {
+        &__action-icon-base {
+            background-color: $color-midnight;
+        }
+
+        &__action-icon {
+            color: $color-white;
+        }
+
+        &__action-label.text-normal-case-label {
+            color: $color-midnight;
+        }
+
+        &__edit-button.button.inline {
+            &:hover {
+                border-color: $color-midnight;
+
+                .button__icon {
+                    color: $color-midnight;
+                }
+            }
+        }
+
+        &__divider {
+            border-left-color: $color-midnight;
+        }
+    }
+
     &__action-icon-base {
         display: inline-block;
         background-color: $color-white;
@@ -14,6 +42,7 @@
         width: 50px;
         height: 50px;
     }
+
     &__action-icon {
         color: $color-midnight;
         display: table-cell;
@@ -34,25 +63,43 @@
         color: $color-white;
     }
 
-    &__edit-button.button.inline {
-        background-color: transparent;
-        border: 1px solid $color-strong-neutral-60;
-        margin-left: $spacing-sm;
-        height: 18px;
-        width: 18px;
-        min-width: 18px;
+    &__edit-button {
+        &.button.inline {
+            background-color: transparent;
+            border: 1px solid $color-strong-neutral-60;
+            margin-left: $spacing-sm;
+            height: 18px;
+            width: 18px;
+            min-width: 18px;
 
-        &:hover {
-            border-color: $color-white;
+            &:hover {
+                border-color: $color-white;
+
+                .button__icon {
+                    color: $color-white;
+                }
+            }
 
             .button__icon {
-                color: $color-white;
+                color: $color-strong-neutral-60;
+                font-size: 10px;
             }
         }
 
-        .button__icon {
-            color: $color-strong-neutral-60;
-            font-size: 10px;
+        &--inverted.button.inline {
+            border-color: $color-midnight;
+
+            &:hover {
+                border-color: $color-blue-grey;
+
+                .button__icon {
+                    color: $color-blue-grey;
+                }
+            }
+
+            .button__icon {
+                color: $color-midnight;
+            }
         }
     }
 
@@ -60,5 +107,9 @@
         border-left: 1px dotted $color-white;
         margin-top: 57px;
         margin-bottom: 10px;
+
+        &--inverted {
+            border-left-color: $color-midnight;
+        }
     }
 }
