--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -53,6 +53,7 @@
 @import './components/container';
 @import './components/dropdown';
 @import './components/feedback';
+@import './components/field-message';
 @import './components/file-input';
 @import './components/float-label';
 @import './components/form';
