UIP-3419: Added node field component

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -34,6 +34,7 @@
 @import 'templates/section-columns';
 @import 'layout/nav-card';
 @import 'layout/nav-frame';
+@import 'general/node-field';
 @import 'layout/segmented-box';
 
 $layout-header-height: 46px;
