--- a/packages/ui-library/src/css/panels/_quick-actions.scss
+++ b/packages/ui-library/src/css/panels/_quick-actions.scss
@@ -104,7 +104,7 @@
     }
 
     &__divider {
-        border-left: 1px dotted $color-white;
+        border-left: 1px dashed $color-white;
         margin-top: 57px;
         margin-bottom: 10px;
 
