--- a/packages/ui-library/src/css/layout/_nav-card.scss
+++ b/packages/ui-library/src/css/layout/_nav-card.scss
@@ -2,6 +2,7 @@
     display: flex;
 
     .dashboard-card__front {
+        border: none;
         border-radius: 4px;
 
         //setting temp background
