UIP-3566: Sidebar narrows with certain content

--- a/packages/ui-library/src/css/layout/_nav-frame.scss
+++ b/packages/ui-library/src/css/layout/_nav-frame.scss
@@ -18,6 +18,7 @@
     $nav-width: 200px;
     display: flex;
     width: $nav-width;
+    min-width: $nav-width;
     > * {
         box-sizing: border-box;
     }
