UIP-3570 NavFrame IE bug fix

--- a/packages/ui-library/src/css/layout/_nav-frame.scss
+++ b/packages/ui-library/src/css/layout/_nav-frame.scss
@@ -30,6 +30,7 @@
 
         &--group-visible {
             flex-grow: 0;
+            min-width: 50px;
             .nav-sidebar__section-title {
                 visibility: hidden;
                 width: 0;
