UIP-2226 Remove excess spacing and align content left

--- a/packages/ui-library/src/css/layout/_header-bar.scss
+++ b/packages/ui-library/src/css/layout/_header-bar.scss
@@ -35,6 +35,10 @@ $topnav-bg: $color-neutral-10;
     white-space: nowrap;
 }
 
+.header-bar__left {
+    justify-content: flex-start;
+}
+
 .header-bar__left > * {
     margin-right: $spacing-md;
 
