UIP-3337: Phone Input country dropdown not scrolling

--- a/packages/end-user/src/css/components/_dropdown.scss
+++ b/packages/end-user/src/css/components/_dropdown.scss
@@ -123,8 +123,16 @@ $caret-height: 16px;
 
     &--search {
         .dropdown__list {
-            position: absolute;
+            height: 250px;
             top: 0;
+
+            .dropdown__option--container {
+                position: absolute;
+                height: 200px;
+                overflow: hidden;
+                overflow-y: scroll;
+                width: 100%;
+            }
         }
         &.dropdown--open {
             &:after {
