--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -35,6 +35,7 @@ $default-input-border-radius: 2px;
 */
 
 .button,
+.input-checkbox > input,
 .input-radio > input,
 .anchor,
 .rocker-button__button,
@@ -58,6 +59,7 @@ $default-input-border-radius: 2px;
 
 .ui-library-focus-visible {
     .button,
+    .input-checkbox > input,
     .input-radio > input,
     .anchor,
     .rocker-button__button,
@@ -75,6 +77,7 @@ $default-input-border-radius: 2px;
     .tile-button {
         &:focus {
             outline-width: 5px;
+            outline-color: rgba($color-active, 0.5);
         }
     }
 }
@@ -416,9 +419,8 @@ label {
         }
         input[type=checkbox] {
             position: absolute;
-            visibility: hidden;
             margin: 0;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: $checkbox-size;
             height: $checkbox-size;
@@ -2472,7 +2474,8 @@ input[type=file] {
         &.inline {
             vertical-align: bottom;
             line-height: 27px;
-            .icon {
+            .icon,
+            input {
                 top: 0;
                 bottom: unset;
             }
