--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -2772,6 +2772,16 @@ a {
     }
 }
 
+@mixin flex-width-css($size) {
+    .label-text {
+        @include break-word;
+    }
+    &.input-text {
+        min-width: map-get($input-width-settings-map-text, $size);
+        width: auto;
+    }
+}
+
 // this is only used by the unit input
 .text-field--right-align input {
     text-align: right;
@@ -3232,4 +3242,36 @@ label.input-text--right-icon {
     right: 0;
     font-size: 10px;
     text-transform: lowercase;
+}
+
+.flex-width-XS {
+    @include flex-width-css('xsmall');
+}
+
+.flex-width-SM {
+    @include flex-width-css('small');
+}
+
+.flex-width-MD {
+    @include flex-width-css('medium');
+}
+
+.flex-width-LG {
+    @include flex-width-css('large');
+}
+
+.flex-width-XL {
+    @include flex-width-css('xlarge');
+}
+
+.flex-width-XX {
+    @include flex-width-css('full');
+}
+
+.flex-width-spacer {
+    font-size: 1.08em;
+    height: 0;
+    padding: 0 15px;
+    text-transform: none;
+    visibility: hidden;
 }
