Removing some tests. Adding margin to account for reveal icon. IE specific css

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -3269,9 +3269,35 @@ label.input-text--right-icon {
 }
 
 .flex-width-spacer {
-    font-size: 1.08em;
+    font-size: 1.09em;
     height: 0;
     padding: 0 15px;
     text-transform: none;
     visibility: hidden;
+
+    &__password {
+        font-size: 0.4em;
+        // Icon font used for monospacing to match password masking character
+        font-family: $icon-font;
+    }
+
+    &__reveal {
+        margin-left: 25px;
+    }
+}
+
+// IE-specific CSS
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+
+    .flex-width-spacer {
+        &__password {
+            font-size: 0.66em;
+            font-family: $icon-font;
+            margin-left: 30px;
+        }
+
+        &__reveal {
+            margin-left: 55px;
+        }
+    }
 }
