UIP-3624: Fixed Quick Actions in IE

--- a/packages/ui-library/src/css/layout/_nav-card.scss
+++ b/packages/ui-library/src/css/layout/_nav-card.scss
@@ -6,7 +6,7 @@
         border-radius: 4px;
 
         //setting temp background
-        background-color: #021e3585;
+        background-color: rgba(2, 30, 53, 0.521);
     }
 
     &__title.text-page-title {
