UIP-3623: Added Ping Fed icons to icon font

--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -154,3 +154,23 @@ $icon-view-hidden: add-backslash("2f");
 $icon-walkthrough: add-backslash("4d");
 $icon-wand: add-backslash("57");
 $icon-welcome: add-backslash("77");
+
+// Ping Fed icons
+$icon-pf-applications-integration: add-backslash("e903");
+$icon-pf-applications-oauth: add-backslash("e904");
+$icon-pf-applications-token-exchange: add-backslash("e94d");
+$icon-pf-authentication-integration-path1: add-backslash("e94e");
+$icon-pf-authentication-integration-path2: add-backslash("e94f");
+$icon-pf-authentication-oauth-path1: add-backslash("e950");
+$icon-pf-authentication-oauth-path2: add-backslash("e951");
+$icon-pf-authentication-policies: add-backslash("e952");
+$icon-pf-authentication-token-exchange: add-backslash("e953");
+$icon-pf-security-certificate-key-mgmt: add-backslash("e954");
+$icon-pf-security-system-integration: add-backslash("e955");
+$icon-pf-system-data-credential-stores: add-backslash("e956");
+$icon-pf-system-endpoints: add-backslash("e957");
+$icon-pf-system-external-systems: add-backslash("e958");
+$icon-pf-system-notifications: add-backslash("e959");
+$icon-pf-system-oauth-settings: add-backslash("e95a");
+$icon-pf-system-protocol-metadata: add-backslash("e95b");
+$icon-pf-system-server: add-backslash("e95c");
