P14C-12617: Make page full-height of viewport

--- a/packages/branding-themes/scss/_helpers.scss
+++ b/packages/branding-themes/scss/_helpers.scss
@@ -29,7 +29,15 @@
     body,
     html,
     .page {
-        height: 100%;
+        height: 100vh;
+
+        &__content {
+            height: 100vh;
+
+            &__content > div {
+                height: 100vh;
+            }
+        }
     }
 
     .page {
