--- a/packages/end-user/src/css/components/_button.scss
+++ b/packages/end-user/src/css/components/_button.scss
@@ -40,7 +40,7 @@
         width: auto;
         margin-left: auto;
         margin-right: auto;
-        min-height: auto;
+        min-height: initial;
     }
 
     &:disabled, &--disabled {
